--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
         <script src="./talwind.js"></script>
         <script src="./alpinejs.min.js" defer></script>
         <link rel="stylesheet" href="./style.css" />
@@ -108,11 +109,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -221,7 +224,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -981,11 +984,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1094,7 +1099,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -1865,11 +1870,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1978,7 +1985,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -2211,7 +2218,6 @@
                                             class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
                                         >
                                             شراء الان
-
                                         </button>
                                     </a>
                                 </div>
@@ -2416,7 +2422,7 @@
 
                                 <form
                                     class="mt-6"
-                                    onsubmit="sendmail(event, 'en')"
+                                    onsubmit="sendmail(event, 'ar')"
                                 >
                                     <div
                                         class="grid grid-cols-1 md:grid-cols-2 gap-6"
