--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
         <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
         <script src="./alpinejs.min.js" defer></script>
         <link rel="stylesheet" href="./style.css" />
@@ -109,11 +110,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -773,11 +776,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1443,11 +1448,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1821,20 +1828,16 @@
                             <p
                                 class="text-center text-lg leading-relaxed text-gray-300 mx-8"
                             >
-                                نحن نقدم مجموعة واسعة من الفئات المختلفة من المنتجات
-                                مثل منتجات المياه الذكية ومنتجات إدارة المياه
-                                ومنتجات تنقية المياه ومستلزمات المياه ... علاوة
-                                إلى ذلك، نعمل على توعية الناس بواسطة
-                                تزويد المجتمع بمعلومات قيمة ونصائح عن مواردهم
-                                المائية
+                                نحن نقدم مجموعة واسعة من الفئات المختلفة من
+                                المنتجات مثل منتجات المياه الذكية ومنتجات إدارة
+                                المياه ومنتجات تنقية المياه ومستلزمات المياه ...
+                                علاوة إلى ذلك، نعمل على توعية الناس بواسطة تزويد
+                                المجتمع بمعلومات قيمة ونصائح عن مواردهم المائية
                                 <br />
-                                 هدفنا هو الحفاظ على المياه وجعلها موردًا مستداما
-                                ً بالجودة المناسبة، بواسطة تزويد عملائنا
-                                بمجموعة واسعة من المنتجات التي 
-
-
-توفر المياه
-                                وتنقيتها بتكلفة معقولة
+                                هدفنا هو الحفاظ على المياه وجعلها موردًا مستداما
+                                ً بالجودة المناسبة، بواسطة تزويد عملائنا بمجموعة
+                                واسعة من المنتجات التي توفر المياه وتنقيتها
+                                بتكلفة معقولة
                             </p>
                         </div>
                     </div>
@@ -1901,7 +1904,8 @@
                             <hr class="hidden border-gray-200" />
 
                             <p class="hidden p-8 text-sm text-gray-500">
-                                يجب عليك ملء النموذج. سوف نتواصل معك لمزيد من المعلومات ومن ثم سوف نقوم بشحن المنتج لك
+                                يجب عليك ملء النموذج. سوف نتواصل معك لمزيد من
+                                المعلومات ومن ثم سوف نقوم بشحن المنتج لك
                             </p>
                         </div>
                     </div>
