--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
         <script src="./talwind.js"></script>
         <script src="./alpinejs.min.js" defer></script>
         <link rel="stylesheet" href="./style.css" />
@@ -108,11 +109,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -221,7 +224,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6 pb-16">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6 pb-16">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -411,12 +414,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs </span
-                                        >
+                                            >Dhs
+                                        </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 
+                                            Dhs
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -856,11 +859,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -969,7 +974,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6 pb-16">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6 pb-16">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -1161,12 +1166,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs </span
-                                        >
+                                            >Dhs
+                                        </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 
+                                            Dhs
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1609,11 +1614,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1722,7 +1729,7 @@
             </section>
 
             <section>
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-6 pb-16">
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 pt-6 pb-16">
                     <nav class="flex mb-16" aria-label="Breadcrumb">
                         <ol
                             class="inline-flex items-center space-x-1 md:space-x-3"
@@ -1911,12 +1918,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs </span
-                                        >
+                                            >Dhs
+                                        </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 
+                                            Dhs
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1936,7 +1943,7 @@
                                             type="button"
                                             class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
                                         >
-                                       احجز الآن
+                                            احجز الآن
                                         </button>
                                     </a>
                                 </div>
@@ -2039,7 +2046,7 @@
 
                                 <form
                                     class="mt-6"
-                                    onsubmit="sendmail(event, 'en')"
+                                    onsubmit="sendmail(event, 'ar')"
                                 >
                                     <div
                                         class="grid grid-cols-1 md:grid-cols-2 gap-6"
@@ -2159,7 +2166,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                       اطلب الان
+                                        اطلب الان
                                     </button>
                                 </form>
                             </div>
