--- a/store.html
+++ b/store.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
         <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
         <script src="./alpinejs.min.js" defer></script>
         <link rel="stylesheet" href="./style.css" />
@@ -109,11 +110,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -993,11 +996,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
@@ -1903,11 +1908,13 @@
                 >
                     <div class="flex items-center justify-between">
                         <div>
-                            <img
-                                src="./assets/logo.png"
-                                alt=""
-                                class="h-9 mr-3 sm:h-24"
-                            />
+                            <a href="./index.html">
+                                <img
+                                    src="./assets/logo.png"
+                                    alt=""
+                                    class="h-9 mr-3 sm:h-24"
+                                />
+                            </a>
                         </div>
 
                         <!-- Mobile menu button -->
