i change waste in universalR.... to wastee

--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -685,7 +685,7 @@
                                 >TECHMAA</a
                             >
                             <p class="mt-5 text-gray-700">
-                                Drink pure water without any waste
+                                Drink pure water without any wastee
                             </p>
                         </div>
 
