from "waste" to "wastee" in now return to "waste"

--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -685,7 +685,7 @@
                                 >TECHMAA</a
                             >
                             <p class="mt-5 text-gray-700">
-                                Drink pure water without any wastee
+                                Drink pure water without any waste
                             </p>
                         </div>
 
