return to default

--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -414,7 +414,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >100Dhs
+                                            >Dhs
                                         </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
