--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1267,7 +1267,8 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                Filtre à eau à 5 couches pour robinet
+                            Filtre à eau de robinet à 5 couches
+                                
                             </h2>
 
                             <p class="text-gray-500">
