--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1479,7 +1479,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter Filtre à eau à 5 couches pour robinet
+                                Acheter Filtre à eau de robinet à 5 couches
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1566,7 +1566,7 @@
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Filtre à eau à 5 couches pour robinet"
+                                                value="Filtre à eau de robinet à 5 couches"
                                                 disabled
                                             />
                                         </div>
