--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1159,8 +1159,9 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >Filtre à eau de robinet à 5 couches
-                                    </span
+                                        >Filtre à eau de robinet à 5 
+                                 couches</span
+                                    
                                     >
                                 </div>
                             </li>
