فلتر لتنقية المياه من 5 طبقات للمطبخ

--- a/store.html
+++ b/store.html
@@ -2310,7 +2310,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                فلتر مياه ذو 5 طبقات
+                                            فلتر لتنقية المياه من 5 طبقات للمطبخ
                                             </h2>
                                         </div>
                                         <p
