--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -2047,7 +2047,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >فلتر مياه ذو 5 طبقات</span
+                                        >فلتر لتنقية المياه من 5 طبقات للمطبخ</span
                                     >
                                 </div>
                             </li>
@@ -2154,7 +2154,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                فلتر مياه ذو 5 طبقات
+                            فلتر لتنقية المياه من 5 طبقات للمطبخ
                             </h2>
 
                             <p class="text-gray-500">
@@ -2352,7 +2352,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء فلتر مياه ذو 5 طبقات
+                                قم بشراء فلتر لتنقية المياه من 5 طبقات للمطبخ
                             </h1>
 
                             <p class="mt-6 max-w-xl">
