--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -2438,7 +2438,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="فلتر مياه ذو 5 طبقات"
+                                                value="فلتر لتنقية المياه من 5 طبقات للمطبخ"
                                                 disabled
                                             />
                                         </div>
