--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1765,8 +1765,9 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >جهسخان مياه كهربائي فوري بدون خزان،
-                                        للمطبخ والحمام</span
+                                        >صنبور تسخين الماء
+                                         الفوري للمطبخ والحمام
+                                        </span
                                     >
                                 </div>
                             </li>
@@ -1937,8 +1938,9 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء جهسخان مياه كهربائي فوري بدون خزان،
-                                للمطبخ والحمام
+                                قم بشراء صنبور تسخين الماء 
+                                الفوري للمطبخ والحمامن،
+                                
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -2207,8 +2209,9 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >سخان مياه كهربائي فوري بدون خزان، للمطبخ
-                                    والحمام</a
+                                    >صنبور تسخين الماء
+                                     الفوري للمطبخ والحمام
+                                    </a
                                 >
                             </div>
                         </div>
