--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1848,8 +1848,8 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                سخان مياه كهربائي فوري بدون خزان ، مطبخ ، ماء
-                                ساخن أو بارد
+                            صنبور تسخين الماء 
+                            الفوري للمطبخ والحمام
                             </h2>
 
                             <ul class="text-gray-500 list-disc">
@@ -2026,7 +2026,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="جهسخان مياه كهربائي فوري بدون خزان، للمطبخ والحمام"
+                                                value="صنبور تسخين الماء الفوري للمطبخ والحمام"
                                                 disabled
                                             />
                                         </div>
