--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -2157,8 +2157,9 @@
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >سخان مياه كهربائي فوري بدون خزان، للمطبخ
-                                    والحمام</a
+                                    >صنبور تسخين الماء
+                                     الفوري للمطبخ والحمام
+                                    </a
                                 >
                             </div>
                         </div>
