--- a/index.html
+++ b/index.html
@@ -1741,8 +1741,9 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                سخان مياه كهربائي فوري بدون
-                                                خزان، للمطبخ والحمام
+                                            صنبور تسخين الماء
+                                             الفوري للمطبخ والحمام
+                                                
                                             </h2>
                                         </div>
                                         <p
