--- a/store.html
+++ b/store.html
@@ -2182,8 +2182,9 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                سخان مياه كهربائي فوري بدون
-                                                خزان، للمطبخ والحمام
+                                            صنبور تسخين الماء 
+                                            الفوري للمطبخ والحمام
+                                            
                                             </h2>
                                         </div>
                                         <p
