--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -2227,9 +2227,9 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                فلتر الماء الدوار 360 المتطور لتنقية ماء الصنبور
-                                وتوفير المياه أداة غسل يدوية دوارة- تمديد
-                                الصنبور
+                            فلتر صنبور دوار 
+                            قابل للتمديد 360 درجة
+                        
                             </h2>
 
                             <p class="text-gray-500">
@@ -2521,7 +2521,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value=" فلتر الماء الدوار 360 المتطور لتنقية ماء الصنبور وتوفير المياه أداة غسل يدوية دوارة- تمديد الصنبور"
+                                                value="فلتر صنبور دوار قابل للتمديد 360 درجة"
                                                 disabled
                                             />
                                         </div>
