--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -2697,9 +2697,9 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >فلتر الماء الدوار 360 المتطور لتنقية ماء
-                                    الصنبور وتوفير المياه أداة غسل يدوية دوارة-
-                                    تمديد الصنبور</a
+                                    >فلتر صنبور دوار 
+                                    قابل للتمديد 360 درجة
+                                    </a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
