--- a/store.html
+++ b/store.html
@@ -2116,10 +2116,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                فلتر الماء الدوار 360 المتطور
-                                                لتنقية ماء الصنبور وتوفير المياه
-                                                أداة غسل يدوية دوارة- تمديد
-                                                الصنبور
+                                            فلتر صنبور دوار قابل للتمديد 360 درجة
                                             </h2>
                                         </div>
                                         <p
