--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -416,9 +416,8 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                360 Degree Swivel Faucet Kitchen Bathroom Basin
-                                Water Saving Hand Wash Swivel Extension Faucet
-                                Shower Head Faucet Aerator
+                            Filtre de robinet rotatif à 360 degrés extensible et efficace
+                            
                             </h2>
 
                             <p class="text-gray-500">
@@ -622,7 +621,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy SWS Water Purifier
+                                Buy Filtre de robinet rotatif à 360 degrés extensible et efficace
                             </h1>
 
                             <p class="mt-6 max-w-xl">
