--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -707,7 +707,7 @@
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="SWS Water Purifier"
+                                                value="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                                 disabled
                                             />
                                         </div>
