--- a/store.html
+++ b/store.html
@@ -304,7 +304,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -317,7 +317,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                360 Degree Swivel Faucet
+                                            Filtre de robinet rotatif à 360 degrés extensible et efficace
                                             </h2>
                                         </div>
                                         <p
@@ -2116,7 +2116,10 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                            فلتر صنبور دوار قابل للتمديد 360 درجة
+                                                فلتر الماء الدوار 360 المتطور
+                                                لتنقية ماء الصنبور وتوفير المياه
+                                                أداة غسل يدوية دوارة- تمديد
+                                                الصنبور
                                             </h2>
                                         </div>
                                         <p
@@ -2674,9 +2677,9 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >فلتر صنبور دوار 
-                                    قابل للتمديد 360 درجة
-                                    </a
+                                    >فلتر الماء الدوار 360 المتطور لتنقية ماء
+                                    الصنبور وتوفير المياه أداة غسل يدوية دوارة-
+                                    تمديد الصنبور</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
