--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -784,7 +784,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >360 Degree Swivel Faucet</a
+                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
