--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -336,7 +336,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                360 Degree Swivel Faucet
+                                            Filtre de robinet rotatif à 360 degrés extensible et efficace
                                             </h2>
                                         </div>
                                         <p
@@ -645,7 +645,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >360 Degree Swivel Faucet</a
+                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
@@ -1662,7 +1662,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
