--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1639,7 +1639,7 @@
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="#"
-                                >ابحث
+                                >قصة
                             </a>
                         </div>
 
