--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1634,7 +1634,7 @@
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./index.html#عنا"
-                                >معلومات عنا
+                                >عنا
                             </a>
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
