--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -695,7 +695,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS Water Purifier</a
+                                    >water purifier for kitchen faucet</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
