--- a/store.html
+++ b/store.html
@@ -256,7 +256,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                SWS Water Purifier
+                                            water purifier for kitchen faucet
                                             </h2>
                                         </div>
                                         <p
@@ -428,7 +428,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/360DegreeRotatingFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -860,7 +860,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS Water Purifier</a
+                                    >water purifier for kitchen faucet</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
@@ -1513,7 +1513,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/MiniFaucetWaterFilter/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2235,7 +2235,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="SWS Water Purifier"
+                                        alt="water purifier for kitchen faucet"
                                         src="./assets/360DegreeRotatingFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
