--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -391,7 +391,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                SWS water purifier
+                            water purifier for kitchen faucet
                             </h2>
 
                             <p class="text-gray-500">
@@ -699,7 +699,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy SWS Water Purifier
+                                Buy water purifier for kitchen faucet
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -953,7 +953,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS Water Purifier</a
+                                    >water purifier for kitchen faucet</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
